# 1984

./: README.md
aportaciones/: Reconocimiento facial.cpp
display_image/: CMakeCache.txt  leeme
modules/LoginRegister/: datos.sql  funcmodify.php  imagen.php  logout.php  news.php  register.php  sessionlogin.php
modules/Telegram-bot-python/: Bot.py  pepe.txt  try.py  tryF.py
modules/inet/: client  client.cpp  cliente  cliente.cpp  image_file.cpp  image_file.h  server  server.cpp
modules/login_register/: README.txt  home.php  imagen.php  index.php  login.php  modify.php  news.php  resultado.php
modules/recognition/: notas.txt
modules/recognition/src/: .simple_trainer.cpp.swp  CMakeCache.txt  CMakeLists.txt  DisplayImage.cpp  Makefile  Makefile.am  Makefile.in  README.txt  cmake_install.cmake  config.h  config.h.in  config.status  configure  configure.ac  name.txt  old.Makefile  recognizer  recognizer.cpp  reconocimiento_facial  reconocimiento_facial.cpp
modules/recognition/src/autom4te.cache/: output.1  requests  traces.0  traces.1
modules/scrapedb/: Gemfile  LICENSE.txt  README.md  scrapedb-0.0.0.gem  scrapedb.gemspec
modules/socketTry/: client  client.cpp  server  server.cpp
modules/telegrambot_nodejs/: index.js  package.json
modules/tg/: config.status  inotify  inotify_2.cpp  lector  lector.cpp  timestamp  timestamp.c
modules/watcher/: README  cola.cpp  detector.h  image_filter  image_filter.cpp  inotify  inotify.cpp  inotifytry  inotifytry.cpp  main.cpp
scrapedb/: Rakefile  scrapedb.gemspec
scrapedb/doc/: cadenas  filtroAlumnos.json  info.txt
(+75 files in other folders)
